fix: Adding back filepicker functionality

--- a/UI/FileSavePickeriOS/FileSavePickeriOS/FileSavePickeriOS.Shared/MainPage.xaml
+++ b/UI/FileSavePickeriOS/FileSavePickeriOS/FileSavePickeriOS.Shared/MainPage.xaml
@@ -5,10 +5,9 @@
     xmlns:local="using:FileSavePickeriOS"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"    
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
-    <Grid>
-      <TextBlock Text="Hello, world!" Margin="20" FontSize="30" />
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Button Click="SaveFile_Click" HorizontalAlignment="Center" VerticalAlignment="Center">Save as...</Button>
     </Grid>
 </Page>
