--- a/UI/XamlBasics/ListViewSample/ListViewSample.Shared/MainPage.xaml
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Shared/MainPage.xaml
@@ -1,4 +1,4 @@
-<Page
+﻿<Page
 	x:Class="ListViewSample.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -23,27 +23,28 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 		<StackPanel Spacing="12" Margin="12" Orientation="Horizontal">
-			<TextBlock FontSize="22" Text="My Connections" FontWeight="SemiBold"/>
+			<TextBlock FontSize="22" Text="Workplace Connections" FontWeight="SemiBold"/>
 			<Button Command="{x:Bind addFriendCommand}">
 				<Button.Content>
 					<StackPanel Spacing="4" Orientation="Horizontal">
 						<FontIcon Glyph="&#xe710;"/>
-						<TextBlock Text="New connection"/>
+						<TextBlock Text="New"/>
 					</StackPanel>
 				</Button.Content>
 			</Button>
 		</StackPanel>
-		<Grid Grid.Row="1" BorderThickness="0,0,0,1" BorderBrush="{ThemeResource LayerFillColorDefaultBrush}" ColumnSpacing="12" Padding="12,4">
+		<Grid Grid.Row="1" BorderThickness="0,0,0,1" BorderBrush="{ThemeResource LayerFillColorDefaultBrush}" ColumnSpacing="12" Padding="8">
 			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="0.2*"/>
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="*"/>
 			</Grid.ColumnDefinitions>
-			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="0" Text="Name"/>
-			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="1" Text="Occupation"/>
-			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="2" Text="Id"/>
+			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="1" Text="Name"/>
+			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="2" Text="Occupation"/>
+			<TextBlock FontWeight="SemiBold" FontSize="18" TextTrimming="CharacterEllipsis" Grid.Column="3" Text="Id"/>
 		</Grid>
-		<ListView x:Name="friendsList" Grid.Row="2" ContainerContentChanging="ListView_ContainerContentChanging" ItemsSource="{Binding Friends}">
+		<ListView x:Name="friendsList" SelectionMode="None" Grid.Row="2" ContainerContentChanging="ListView_ContainerContentChanging" ItemsSource="{Binding Friends}">
 			<ListView.Resources>
 				<StaticResource x:Key="ListViewItemBackgroundSelected" ResourceKey="AccentFillColorDefaultBrush" />
 				<StaticResource x:Key="ListViewItemBackgroundSelectedPointerOver" ResourceKey="AccentFillColorDefaultBrush" />
@@ -51,15 +52,17 @@
 			</ListView.Resources>
 			<ListView.ItemTemplate>
 				<DataTemplate x:DataType="m:WorkplaceFriend">
-					<Grid ColumnSpacing="12" Margin="2">
+					<Grid ColumnSpacing="12" Margin="0,8">
 						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="0.2*"/>
 							<ColumnDefinition Width="*"/>
 							<ColumnDefinition Width="*"/>
 							<ColumnDefinition Width="*"/>
 						</Grid.ColumnDefinitions>
-						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="0" Text="{x:Bind Name}"/>
-						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="1" Text="{x:Bind Occupation}"/>
-						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="2" Text="{x:Bind Id}"/>
+						<PersonPicture Grid.Column="0"/>
+						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="1" Text="{x:Bind Name}"/>
+						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="2" Text="{x:Bind Occupation}"/>
+						<TextBlock TextTrimming="CharacterEllipsis" Grid.Column="3" Text="{x:Bind Id}"/>
 					</Grid>
 				</DataTemplate>
 			</ListView.ItemTemplate>
