fix: created the correct brush for the background.

--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/App.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/App.xaml
@@ -43,7 +43,13 @@
                         TintOpacity="0.1"
                         TintLuminosityOpacity="0.9"
                         FallbackColor="{ThemeResource SystemAccentColor}" 
-                    />            
+                    />
+                    <AcrylicBrush x:Key="BackgroundBrush"
+                        TintColor="{ThemeResource SystemAccentColor}"
+                        TintOpacity="0.7"
+                        TintLuminosityOpacity="0.9"
+                        FallbackColor="{ThemeResource SystemAccentColor}" 
+                    />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
