--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
@@ -20,7 +20,7 @@
                 BorderThickness="1"
                 Margin="0"
                 BorderBrush="{StaticResource Backdrop}"
-                Background="{StaticResource Backdrop}">        
+                Background="{StaticResource BackgroundBrush}">        
      
         <Grid BorderBrush="{StaticResource SystemAccentColorDark1}"
               BorderThickness="1">
