fix: add missing custom control code.

--- a/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Shared/Themes/Generic.xaml
+++ b/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Shared/Themes/Generic.xaml
@@ -8,7 +8,7 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="local:MyTemplatedControl">
 					<Grid>
-						<TextBlock>
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">
 							<Run Text="MyProperty:" />
 							<Run Text="{Binding MyProperty, RelativeSource={RelativeSource TemplatedParent}}" />
 						</TextBlock>
@@ -17,5 +17,5 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-    
+
 </ResourceDictionary>
