--- a/UI/SkottieSample/SkottieSample/SkottieSample.Shared/MainPage.xaml
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Shared/MainPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+	<Grid x:Name="skiaCanvas">
         <skia:SKXamlCanvas x:Name="canvas"
                            PaintSurface="OnPaintSurface"
                            Background="Transparent"/>
