--- a/UI/ControlLibrary/XamlControlLibrary/Themes/Generic.xaml
+++ b/UI/ControlLibrary/XamlControlLibrary/Themes/Generic.xaml
@@ -1,21 +1,17 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    x:Class="XamlControlLibrary.Themes.Generic"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:XamlControlLibrary">
-
-	<Style TargetType="local:MyTemplatedControl">
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="local:MyTemplatedControl">
-					<Grid>
-						<TextBlock>
-							<Run Text="MyProperty:" />
-							<Run Text="{Binding MyProperty, RelativeSource={RelativeSource TemplatedParent}}" />
-						</TextBlock>
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
-    
+    <Style TargetType="local:MyTemplatedControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:MyTemplatedControl">
+                    <Grid>
+                        <TextBlock Text="My templated control !" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
