--- a/UI/XamlBasics/ListViewSample/ListViewSample.Shared/App.xaml
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Shared/App.xaml
@@ -2,10 +2,16 @@
     x:Class="ListViewSample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ListViewSample">
-	
-	<Application.Resources>
-		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-	</Application.Resources>
+    xmlns:local="using:App1">
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+                <!-- Add resource dictionaries here -->
+            </ResourceDictionary.MergedDictionaries>
+            <!-- Add resources here -->
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
