--- a/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Shared/MainPage.xaml
+++ b/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Shared/MainPage.xaml
@@ -1,21 +1,29 @@
-﻿<Page
-    x:Class="PackageResourcesSample.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PackageResourcesSample"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="PackageResourcesSample.MainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:PackageResourcesSample"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <StackPanel>
-            <TextBox Header="Package asset file name" Text="ms-appx:///Assets/MyPackageAsset.txt" x:Name="assetFileName" />
-            <Button Content="Load" Click="{x:Bind LoadPackageFile}" />
-        </StackPanel>
-        <TextBlock Grid.Row="1" x:Name="output"/>
-    </Grid>
+	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<StackPanel>
+			<TextBox Header="Package asset file name"
+					 Text="ms-appx:///Assets/MyPackageAsset.txt"
+					 x:Name="assetFileName" />
+			<Button Content="Load"
+					Click="{x:Bind LoadPackageFile}" />
+			<TextBox Header="Nested package asset file name"
+					 Text="ms-appx:///Assets/Nested/MyNestedPackageAsset.txt"
+					 x:Name="nestedAssetFileName" />
+			<Button Content="Load Nested"
+					Click="{x:Bind LoadNestedPackageFile}" />
+		</StackPanel>
+		<TextBlock Grid.Row="1"
+				   x:Name="output" />
+	</Grid>
 </Page>
