--- a/reference/SimpleCalc/SimpleCalculator.Base/App.xaml
+++ b/reference/SimpleCalc/SimpleCalculator.Base/App.xaml
@@ -1,25 +1,27 @@
-<Application 
-    x:Class="SimpleCalculator.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleCalculator">
+<Application x:Class="SimpleCalculator.App"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+            xmlns:local="using:SimpleCalculator">
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->
+                
                 <MaterialColors xmlns="using:Uno.Material"
-                                ColorPaletteOverrideSource="ms-appx:///Styles/ColorPaletteOverride.xaml"/>
-                <MaterialFonts xmlns="using:Uno.Material" />
-                <MaterialResources xmlns="using:Uno.Material" />
+                                OverrideSource="ms-appx:///SimpleCalculator/Styles/ColorPaletteOverride.xaml"/>
 
-                <!-- Load Uno.Toolkit.UI resources -->
+                <MaterialFonts xmlns="using:Uno.Material" />
+
+                <MaterialResources xmlns="using:Uno.Material" />
+                
+
                 <ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+                
                 <MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
 
             </ResourceDictionary.MergedDictionaries>
-            <!-- Add resources here -->
         </ResourceDictionary>
     </Application.Resources>
     
